@@ -9,8 +9,8 @@ xml.Projects do
     :activity => map_to_cctray_activity(project.builder_state_and_activity),
     :lastBuildStatus => map_to_cctray_project_status(project.last_complete_build_status),
     :lastBuildLabel => (project.last_complete_build ? project.last_complete_build.label : 'Unknown'),
-    :lastBuildTime => (project.last_complete_build ? format_time(project.last_complete_build.time, :round_trip_local) : '1970-01-01T00:00:00Z'),
-    :nextBuildTime => '1970-01-01T00:00:00Z',
+    :lastBuildTime => (project.last_complete_build ? format_time(project.last_complete_build.time, :round_trip_local) : '1970-01-01T00:00:00.000000-00:00'),
+    :nextBuildTime => '1970-01-01T00:00:00.000000-00:00',
     :projectWebUrl => cc_url,
     :webUrl => "#{cc_url}projects/#{project.name}")
   end
